--- a/Lab_Report/lab_report_1.tex
+++ b/Lab_Report/lab_report_1.tex
@@ -56,6 +56,8 @@
 \textheight=9.0in
 \headsep=0.25in
 
+\graphicspath{{./fig/}}
+
 %----------------------------------------------------------------------------------------
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
